--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,7 @@ built with https://github.com/spf13/cobra[cobra]
 == Building
 ```
 cd $(go env GOPATH)
-git clone https://github.com/dturanski/riff-cli
-cd src/github.com/dturanski/riff-cli
+git clone https://github.com/projectriff/riff-cli
+cd src/github.com/projectriff/riff-cli
 make
 ```
